...
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFFCC" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/playerDetailsCard"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
...
